# widom-atlas-release

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  v04_case_matrix.yaml
docs/: V04_VALIDATION_PLAN.md  api_reference.md
evidence/: scientific_status_lock_2026_06_01.json  v04_1a_native_v4_validation.json  v04_4a_native_v3_validation.json
evidence/v04_2a_genuine_uff/: FIQCEN_clean_min_charges.cif  MANIFEST.md  force_field.json  results.json  simulation.json
evidence/v04_2b_ongari_forensic/: forensic_2b_results.json
evidence/v04_3a_genuine_uff/: MANIFEST.md  force_field.json  results.json  simulation.json
evidence/v04_4c_raspa3_xcheck/: CO2.json  MANIFEST.md  force_field.json  raspa3_output_T298_seed0.txt  results.json  simulation.json
evidence/v04_6c_olson_clean/: MANIFEST.md  force_field.json  olson_native_seed0.json  olson_native_seed1.json  olson_native_seed2.json  raspa3_olson_tailon.json  raspa3_olson_tailon.txt  simulation.json
evidence/v04_audit/: audit_summary.json  pass_criteria.json
evidence/v04_two_tier/: two_tier_summary.json
examples/: README.md  external_samples_manifest_template.json  user_parameter_file_template.json
examples/notebooks/: real_uio66_widom.py  toy_two_basin.py  uio66_zif8_pipeline.py
fixtures/v04/: Na-Rho_CO2_open_0p1bar.cif  Na-Rho_dehydrated_closed.cif  RUBTAK02_SL_DDEC.cif
paper/: references.bib
paper/v06_kups_governance/: .gitignore  BUILD.md  main.tex  metadata.yaml  sections_body.tex
paper/v3_author_written/: main.tex  metadata.yaml  references.bib
scripts/v04/: audit_5c_candidates.py  emit_scientific_status_lock.py  execute_3b_maia_2023.py  execute_4c_6e_bai_2013.py  reverdict_all_branches_two_tier.py
src/widom_atlas/: __init__.py  cli.py  convergence.py  models.py  sites.py
tests/: conftest.py  test_backends.py  test_backends_v03.py  test_benchmark_models.py  test_benchmarks_download.py  test_benchmarks_hashing.py  test_benchmarks_launch_report.py  test_benchmarks_mofxdb.py  test_benchmarks_registry.py  test_benchmarks_runner.py  test_benchmarks_scalar_compare.py  test_cli.py  test_clustering.py  test_data_registry.py  test_density.py  test_evaluator.py  test_from_arrays.py  test_from_widom_result.py  test_ingest.py  test_models.py  test_models_manifest.py  test_models_perturbation.py  test_models_robustness.py  test_models_robustness_report.py  test_npz.py  test_pbc.py  test_perturb.py  test_pipeline.py  test_public_benchmark.py  test_real_material_integration.py  test_reports.py  test_robustness.py  test_sites.py  test_structure_adapters.py  test_symmetry.py  test_validation.py
tests/v04/: test_5b_ensemble_mismatch.py  test_ase_calculator.py  test_bai_2013_loader_and_4c_6e_execution.py  test_branches_audit.py  test_cli.py  test_ff_parser.py  test_geometry.py  test_integration_generated_files.py  test_isodb_audit.py  test_locked_inputs.py  test_maia_2023_loader.py  test_native_ewald.py  test_native_potentials.py  test_native_runner.py  test_native_site_truth.py  test_polarizable_dipoles.py  test_q_st_compatibility.py  test_raspa2_pseudo_format.py  test_raspa2_relabeller.py  test_raspa_binary.py  test_raspa_io.py  test_reference_audit.py  test_scientific_lock_cross_check.py  test_tail_correction.py  test_thresholds_and_bayesian.py  test_trappe_official_cross_validation.py  test_unit_audit.py  test_v04_final_pivot.py  test_widom_statistics.py
v0.5/: FREEZE_MANIFEST.md  IMPLEMENTATION_BRIEF.md  README.md
v0.5/WP3_mlip_widom_governance_demo/: EXTENSION_MODERN_MLIP_PLAN.md
v0.5/reports/: CUSPAI_DEMO_READINESS.md  CUSPAI_ONE_PAGER_SUPPORTED_CLAIMS.md  ENVIRONMENT_VERIFICATION.md  WP3_MLIP_WIDOM_GOVERNANCE_REPORT.md
v0.6/: BRIEF_ERRATA.md  V06_SCIENTIFIC_REPORT.md
v0.6/WPA_kups_widom/: A3_BLOCKING_GOVERNANCE.md  CROSS_ENGINE_PARITY.md  F2_rootcause_shift.json  KUPS_WIDOM_CHARACTERIZATION.md  blocking_sweep_6c.json  cancellation_6c.json  cross_engine_parity.csv  native_4c_convention_matrix.json  native_4c_convention_matrix.py  native_6c.json  native_6c_noshift.json  native_6c_tail.json  native_6c_withSi.json  native_widom_lj.py  parity_4c_ewald.json  parity_6c.json  parity_6c_threeway.json
v0.6/WPB_kups_mlip_ood/: NUMERICAL_GUARDS_ERRATA.md  VERDICT_SCHEMA_V06.md  WPB_OOD_GOVERNANCE.md  d3_evidence_audit.py  d3_evidence_audit.txt  gate1_offset_check.py  gate1_offset_medium-mpa-0.json  jax_mace_energies.json  jax_mace_score.py  jax_torch_parity.json  jax_torch_testgeoms.json  make_wpb_figure.py  run_wpb_deployment.py  run_wpb_ood.py  run_wpb_uma.py  (+16 more)
(+623 files in other folders)
